Use asynchronous airlift HTTP client and executors